--- a/index.html
+++ b/index.html
@@ -1,1 +1,265 @@
-Hello World
+<!DOCTYPE HTML>
+<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+  <title>Kiran Ramnath</title>
+  
+  <meta name="author" content="Kiran Ramnath">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+  <link rel="icon" type="image/png" href="images/seal_icon.png">
+</head>
+
+<body>
+  
+  <table style="width:100%;max-width:800px;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+    <tr style="padding:0px">
+      <td style="padding:0px">
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr style="padding:0px">
+            <td style="padding:2.5%;width:63%;vertical-align:middle">
+              <p style="text-align:center">
+                <name>Kiran Ramnath</name>
+              </p>
+              <p>I am a Data Scientist at <a href="https://www.salesforce.com/">Salesforce</a>, where I work on problems in natural language processing and machine learning.
+              </p>
+              <p>
+              I received my MS in Electrical and Computer Engineering from University of Illinois, Urbana Champaign in May, 2021 where I worked on Fact-based Visual Question Answering using Knowledge Graph Embeddings advised by <a href = "http://www.ifp.illinois.edu/~hasegawa/"> Prof. Mark Hasegawa-Johnson.</a>
+              Prior to that, I worked as a Data Science Consultant with PricewaterhouseCoopers' US Advisory in Mumbai from 2016-19, advising clients on realizing business goals through data-driven insights. I received my Bachelor's in Electrical and Electronics Engineering from BITS, Pilani in 2016. 
+              </p>
+              <p style="text-align:center">
+                <a href="mailto:kiranramnath007@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="data/KiranRamnath-CV.pdf">CV</a> &nbsp/&nbsp
+                <a href="data/KiranRamnath-bio.txt">Bio</a> &nbsp/&nbsp
+                <a href="https://scholar.google.com/citations?user=tdX-pfAAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://github.com/kiranramnath007/">Github</a> &nbsp/&nbsp
+                <a href="https://linkedin.com/in/kiranramnath/">Linkedin</a>
+              </p>
+            </td>
+            <td style="padding:2.5%;width:40%;max-width:40%;height:20%">
+              <a href="images/KiranRamnath.jpg"><img style="width:100%;max-width:100%;height:10 %" alt="profile photo" src="images/KiranRamnath-circle.png" class="hoverZoomLink"></a>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading>Research</heading>
+              <p>
+                I'm interested in machine learning, natural language processing, computer vision, and knowledge graphs - particularly in multi-modal applications of deep learning.
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/FVQA_Architecture.png" alt="blind-date" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://arxiv.org/abs/2012.15484">
+                <papertitle>Seeing is Knowing! Fact-based Visual Question Answering using Knowledge Graph Embeddings</papertitle>
+              </a>
+              <br>
+              <strong>Kiran Ramnath</strong> and <a href = "http://www.ifp.illinois.edu/~hasegawa/"> Mark Hasegawa-Johnson.</a>
+              <br>
+              <em>arXiv </em>CoRR abs/2012.15484
+              <p>We use KG Embeddings to help the network reason over incomplete knowledge graphs to answer fact-based visual questions.</p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/wow.png" alt="clean-usnob" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://aclanthology.org/2021.naacl-main.153/">
+                <papertitle>Worldly Wise (WoW) - Cross-Lingual Knowledge Fusion for Fact-based Visual Spoken-Question Answering</papertitle>
+              </a>
+              <br>
+              <strong>Kiran Ramnath</strong>, <a href="https://scholar.google.com/citations?user=SW4wc24AAAAJ&hl=en">Leda Sari</a>, 
+              <a href="https://slsp.kaist.ac.kr/xe/index.php?mid=bio">Chang D. Yoo</a> and <a href = "http://www.ifp.illinois.edu/~hasegawa/"> Mark Hasegawa-Johnson</a>
+              <br>
+              <em>NAACL-HLT 2021</em>, 1908–1919
+              <p>We perform question-answering directly using speech signals as input over images and knowledge graphs. </p>
+            </td>
+          </tr>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/amplifier.png" alt="clean-usnob" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://aclanthology.org/2021.naacl-main.153/">
+                <papertitle>Performance improvement of operational amplifier in subthreshold region using forward body bias</papertitle>
+              </a>
+              <br>
+              Deepansh Dubey*, <strong>Kiran Ramnath*</strong>, and Anu Gupta (*denotes equal contribution)
+              <br>
+              <em>2015 Annual IEEE India Conference (INDICON)</em>, 1-5
+              <p>In my past life, I performed undergraduate research in VLSI. We demonstrate the benefits of forward-biasing the body of subthreshold op-amps which improves gain and reduces noise in the device. </p>
+            </td>
+          </tr>       
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/regrasper.png" alt="clean-usnob" width="160" height="160">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="data/regrasper.pdf">
+                <papertitle>Grasping the Airwaves with a Robotic Wireless Access Point</papertitle>
+              </a>
+              <br>
+              Emerson Sie, <strong>Kiran Ramnath</strong>, and Kuan-Ying Lee
+              <br>
+              <em>Course project: ECE 598 SG - Learning-based Robotics</em>
+              <p>We trained a deep-learning based policy for a robotic wireless access point to provide better indoor WiFi signal to a receiving device. 
+                The transmitter was strapped onto the end of a 5 DoF robotic arm (Locobot) and the receiver was placed in various locations in the house. 
+                The policy predicts which a series of actions that would result in overall betterment of the receiving signal for the bot. </p>
+            </td>
+          </tr>               
+        </tbody></table>
+
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <heading>Work</heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20">
+          <tbody>
+            <tr>
+              <td style="padding:20px;width:25%:vertical-align:middle">
+                <img src='images/salesforce.svg' alt="clean-usnob" width="100" height="100">
+              </td>
+              <td width="75%" valign ="middle">
+                <papertitle align="right"> <a href = "https://www.salesforce.com/">Salesforce</a></papertitle>                
+                <br>
+                <em>Data Scientist July 2021 - Present</em>
+                <p>
+                  Working with Hyperforce Development Platform Support team that provides customer support to developers on CI/CD as Salesforce migrates to Public Cloud. 
+                  Currently working on NLP use-cases such as search improvement to help reduce support burden by returning relevant technical documentation on Confluence to customers. 
+                  Work also includes metrics generation and data visualization to monitor bot performance and suggest process improvements.
+                </p>
+                <br>
+                <em>Data Scientist Intern May 2020 - July 2020</em>
+                <p>
+                  Worked with Capacity Planning team to predict Salesforce’s global server requirements in 3-5 years.
+                  Performed demand segmentation and built 30+ forecasting models using FB Prophet.
+                  Automated periodic analysis by dockerizing data pipelines.
+                </p>
+              </td>                             
+            </tr>         
+            <tr>
+              <td style="padding:20px;width:25%:vertical-align:middle">
+                <img src='images/pwc.svg' alt="clean-usnob" width="100" height="100">
+              </td>
+              <td width="75%" valign ="middle">
+                <papertitle align="right"> <a href = "https://www.pwc.com/">PricewaterhouseCoopers US Advisory</a></papertitle>      
+                <br>          
+                <em>Experienced Associate July 2016 - June 19</em>                
+                <br>
+                <p>
+                  Worked across sectors like Finance, Healthcare, and Technology implementing data science use-cases. 
+                  Project areas varied across customer analytics, market research, and company-wide analytics transformation. 
+                  Modelling techniques spanned linear / logistic regression, decision trees, topic-modelling, random forest, bayesian networks, and deep learning. 
+                </p>
+              </td>           
+            </tr>
+            <tr>
+              <td style="padding:20px;width:35%:vertical-align:middle">
+                <img src='images/dps.png' alt="clean-usnob" width="100" height="100">
+              </td>
+              <td width="75%" valign ="middle">
+                <papertitle align="right"> <a href = "https://digitalproductschool.io/">Digital Product School, TU Munich </a> </papertitle>
+                <br>
+                <em>AI Engineer Intern Jan 2019 - June 19 (Externship)</em>
+                <p>
+                  Digital Product School is an intense 3-month fellowship program conducted by Center for business and Innovation at TU Munich, aimed at grooming the next generation of product makers to thrive in cross functional teams in a lean startup environment, with a prime focus on user-centered design. 
+                  I worked as an AI Engineer partnering with BMW and Nokia to build a solution to help cities deal better with traffic flow.
+                  My work involved conducting user interviews, ideating and managing product feature pipelines, building back-end infrastructure, and conducting feasibility studies using Agent-based simulation.
+                </p>
+              </td>           
+            </tr>            
+            <tr>
+              <td style="padding:20px;width:25%:vertical-align:middle">
+                <img src='images/cisco.svg' alt="clean-usnob" width="100" height="100">
+              </td>
+              <td width="75%" valign ="middle">
+                <papertitle align="right"> <a href = "https://digitalproductschool.io/">CISCO </a> </papertitle>
+                <br>
+                <em>Software Engineer Intern Jan 2016 - June 19</em>
+                <p>
+                Worked on developing and managing content, design and operations of a workplace optimization web portal that allowed managers to remotely track and monitor a new hire's progress.
+                Conceptualized the entire pipeline and implemented frontend and backend using Python's Django framework, along with unit testing using Selenium and continuous deployment using Jenkins
+                Improved ramping up time and efficiency for 100 new hires during the course of the internship
+                </p>
+              </td>                 
+            </tr>            
+          </tbody>
+        </table>
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <heading>Freelance</heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/gfems.png" alt="blind-date" width="100" height="100">
+            </td>
+            <td width="75%" valign="middle">
+              <a href="https://www.gfems.org/reports/measuring-deterrence-for-commercial-sexual-exploitation-of-children-in-maharashtra/">
+                <papertitle>Deterring Online Commercial Sexual Exploitation of children in Maharashtra</papertitle>
+              </a>
+              <br>
+              <em>Consulting Data Scientist July 2019</em>
+              <p>Worked as a consultant data scientist contracted by <a href = "https://dalberg.com/">Dalberg Advisors, India</a> working along with Global Fund to End Modern Slavery (GFEMS).
+                Helped devise their online sex-trafficking deterrence strategy by scraping ~100,000 ads from several websites and analysing top locations, suppliers, etc.</p>
+            </td>
+          </tr>
+        </tbody></table>  
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
+              <heading>Graduate Teaching Experience</heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+          <tr>
+            <td style="padding:20px;width:25%;",align="center">
+              <img src="images/cs440.jpeg" alt="cs440">
+            </td>
+            <td width="75%" valign="center">
+              <a href="https://courses.grainger.illinois.edu/ece448/sp2021/index.html">CS 440 Artificial Intelligence Spring 2021</a>
+              <br>
+              <br>
+              <a href="https://courses.engr.illinois.edu/ece448/sp2020/">CS 440 Artificial Intelligence Spring 2020</a>
+              <br>
+              <br>
+              <a href="https://courses.engr.illinois.edu/ece110/fa2019/">ECE 110 Introduction to Electronics Fall 2019, Fall 2020 </a>
+            </td>
+          </tr>
+        </tbody></table>
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+            <td style="padding:0px">
+              <br>
+              <p style="text-align:right;font-size:small;">
+                Many thanks to Jon Barron's source code on which this website is based - <a href = "http://jonbarron.info">site</a>, 
+                <a href = "https://github.com/jonbarron/website">source code</a>
+              </p>
+            </td>
+          </tr>
+        </tbody></table>
+      </td>
+    </tr>
+  </table>
+</body>
+
+</html>
