--- a/index.html
+++ b/index.html
@@ -236,6 +236,27 @@
         <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
           <tr>
             <td>
+              <heading>Invited Talks</heading>
+            </td>
+          </tr>
+        </tbody></table>        
+        <table width="100%" align="center" border="0" cellpadding="20"><tbody>
+          <tr>
+            <td width="75%" valign="center">
+              <em>Analytics-embedded Management Consulting</em>
+              <p><a href="https://en.wikipedia.org/wiki/S._P._Jain_Institute_of_Management_and_Research">SP-Jain Institute of Management and Research</a>, June 2019 </p>
+              <br>
+              <br>
+              <em>A brief overview of Visual Question Answering</em>
+              <p><a href = "https://fpf.org">Future of Privacy Forum</a>, Jan 2021 </p>
+              <br>
+              <br>
+            </td>
+          </tr>
+        </tbody></table>        
+        <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
+          <tr>
+            <td>
               <heading>Graduate Teaching Experience</heading>
             </td>
           </tr>
