--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-  <title>Kiran Ramnath</title>
+  <title>Shyam Nandan Rai</title>
   
   <meta name="author" content="Kiran Ramnath">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,21 +28,17 @@
           <tr style="padding:0px">
             <td style="padding:2.5%;width:63%;vertical-align:middle">
               <p style="text-align:center">
-                <name>Kiran Ramnath</name>
+                <name>Shyam Nandan Rai</name>
               </p>
-              <p>I am a Data Scientist at <a href="https://www.salesforce.com/">Salesforce</a>, where I work on problems in natural language processing and machine learning.
-              </p>
-              <p>
-              I received my MS in Electrical and Computer Engineering from University of Illinois, Urbana Champaign in May, 2021 where I worked on Fact-based Visual Question Answering using Knowledge Graph Embeddings advised by <a href = "http://www.ifp.illinois.edu/~hasegawa/"> Prof. Mark Hasegawa-Johnson.</a>
-              Prior to that, I worked as a Data Science Consultant with PricewaterhouseCoopers' US Advisory in Mumbai from 2016-19, advising clients on realizing business goals through data-driven insights. I received my Bachelor's in Electrical and Electronics Engineering from BITS, Pilani in 2016. 
+              <p>Hi!! I am Shyam Nandan Rai, working as a research assistant at CVIT, IIITH. Currently, I am involved in the vision and safety group at CVIT, working to improve and make autonomous systems more reliable. In detail, I address the problem of minimizing the rain streaks in the images by a few-shot self-supervised method and use restored images to improve computer vision tasks such as pedestrian detection that are critical to autonomous systems. My current research interest lies explicitly in Semantic Segmentation, Image Restoration in adverse weather, GANs, and problems related to the imbalance in large-scale datasets.
+
+I completed my Masters (MS) at IIIT Hyderabad, where I was under the joint supervision of Prof. C.V. Jawahar, Prof. Vineeth N Balasubramanian, and Dr. Anbumani Subramanian on the problems of image restoration in adverse weather conditions. Previously, I was an undergrad honors student at IIIT, Sricity, where I worked on the problems related to Cartoon Image Understanding in collaboration with Prof C.V. Jawahar and Prof. Anand Mishra.
               </p>
               <p style="text-align:center">
-                <a href="mailto:kiranramnath007@gmail.com">Email</a> &nbsp/&nbsp
+                <a href="mailto:shyamnandanraii@gmail.com">Email</a> &nbsp/&nbsp
                 <a href="data/KiranRamnath-CV.pdf">CV</a> &nbsp/&nbsp
-                <a href="data/KiranRamnath-bio.txt">Bio</a> &nbsp/&nbsp
-                <a href="https://scholar.google.com/citations?user=tdX-pfAAAAAJ&hl=en">Google Scholar</a> &nbsp/&nbsp
-                <a href="https://github.com/kiranramnath007/">Github</a> &nbsp/&nbsp
-                <a href="https://linkedin.com/in/kiranramnath/">Linkedin</a>
+                <a href="https://scholar.google.com/citations?user=cKWXiTgAAAAJ&hl=en&scilu=&scisig=AMD79ooAAAAAXwC2H_RIL1uvU67tCvI3HDwqDUglyiNm&gmla=AJsN-F7JctFIA41LPINvCqKyk1GEClN1pqQiHz-wx-xrBpjDq4s-cOlbXq00RhjMJS2STxPunBJCcEhDJ1PIdtrzI8gZR-p7-XIWf2NQjQTH6YfJ2Jj0FIc&sciund=16282882575543874820&scilu=&scisig=AMD79ooAAAAAXwC2JxqandyEoOT5e3K8P47FJaBWf9QM&gmla=AJsN-F5-HMp_CNPDhCkC0YLHkf4nd21LMXJ_vZdM1f8VIdV-c0ps-AXixg8UNjjkUGosrlQvmzT4tq4yAkAPWrrb1TdTn2u5dqhQXiBRG8LawoNDgkVNNgM&sciund=12446050177988319893">Google Scholar</a> &nbsp/&nbsp
+                <a href="https://github.com/shyam671">Github</a> &nbsp/&nbsp
               </p>
             </td>
             <td style="padding:2.5%;width:40%;max-width:40%;height:20%">
@@ -54,9 +50,6 @@
             <tr>
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
-              <p>
-                I'm interested in machine learning, natural language processing, computer vision, and knowledge graphs - particularly in multi-modal applications of deep learning.
-              </p>
             </td>
           </tr>
         </tbody></table>
